@@ -52,7 +52,6 @@ mi_gdb_test "-gdb-set target-async 1" ".*"
 detect_async
 
 if { [mi_run_to_main] < 0 } {
-    perror "mi-nsmoribund.exp tests suppressed"
     continue
 }
 
