@@ -1,3 +1,13 @@
+2010-06-11  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* gdb.mi/mi-nonstop.exp: Do not call perror if non-stop mode is
+	not supported on the target.
+	* gdb.mi/mi-nonstop-exit.exp: Likewise.
+	* gdb.mi/mi-ns-stale-regcache.exp: Likewise.
+	* gdb.mi/mi-nsintrall.exp: Likewise.
+	* gdb.mi/mi-nsmoribund.exp: Likewise.
+	* gdb.mi/mi-nsthrexec.exp: Likewise.
+
 2010-06-11  Stan Shebs  <stan@codesourcery.com>
 
 	* gdb.base/permissions.exp: New file.
